--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "mongoose": "^5.11.5"
+    "mongoose": "^5.11.5",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
