--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.5",
+    "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
 }
