--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.11.5",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
